remove project scope parameter and update example project id in the yaml
