# schematic_api/api/routes.py
@@ -727,7 +727,7 @@ def get_asset_view_table(asset_view, return_type):
         file_view_table_df.to_csv(export_path, index=False)
         return export_path
 
-def get_project_manifests(project_id, asset_view, project_scope=None):
+def get_project_manifests(project_id, asset_view):
     # Access token now stored in request header
     access_token = get_access_token()
 
@@ -735,7 +735,7 @@ def get_project_manifests(project_id, asset_view, project_scope=None):
     config_handler(asset_view=asset_view)
 
     # use Synapse Storage
-    store = SynapseStorage(access_token=access_token, project_scope=project_scope)
+    store = SynapseStorage(access_token=access_token, project_scope=[project_id])
 
     # call getprojectManifest function
     lst_manifest = store.getProjectManifests(projectId=project_id)
